# researchworkspace

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  V1_ACCEPTANCE_REPORT.md  V1_RELEASE_CANDIDATE_REPORT.md  compose.override.yml  compose.yml  manage.py  pyproject.toml
app/accounts/: admin.py  apps.py  backends.py  forms.py  models.py  services.py  urls.py  views.py
app/audit/: admin.py  apps.py  models.py  services.py
app/comments/: apps.py  forms.py  models.py  urls.py  views.py
app/community/: apps.py  urls.py  views.py
app/core/: apps.py  middleware.py  urls.py  views.py
app/papers/: apps.py  forms.py  services.py  urls.py  views.py
app/projects/: admin.py  forms.py  models.py  urls.py  views.py
app/publications/: apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
app/research_objects/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
app/sharing/: apps.py  forms.py  models.py  services.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  development.py  production.py  test.py
docker/: entrypoint.sh
docs/: admin-operations.md  backup-restore.md  deployment.md  recovery-verification.md  upgrade.md  v1.1-release-notes.md  v1.1.1-release-notes.md  v1.2-release-notes.md
scripts/: backup.sh  deploy.sh  healthcheck.sh  recovery-drill.sh  restore.sh
static/css/: app.css
static/js/: mathjax-config.js  research-image-upload.js  research-object-editor.js  research-visibility-controls.js
templates/: base.html
(+60 files in other folders)
