[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "research-workspace-lite"
version = "1.1.1"
description = "Lightweight private research workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.16",
    "bleach==6.4.0",
    "gunicorn==23.0.0",
    "Markdown==3.10.2",
    "psycopg[binary]==3.2.13",
    "pypdf==6.14.2",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["app*", "config*"]
